

-------------------------------------------------------------------------------
??/??/?? IAlibay, HeetVekariya, marinegor, lilyminium, RMeli,
         ljwoods2, aditya292002, pstaerk, PicoCentauri, BFedder,
         tyler.je.reddy, SampurnaM, leonwehrhan, kainszs, orionarcher, 
         yuxuanzhuang, PythonFZ, laksh-krishna-sharma, orbeckst, MattTDavies,
         talagayev, aya9aladdin

 * 2.8.0

Fixes
 * Fixes bug where deleting connections by index would only delete
   one of multiple, if multiple are present (Issue #4762, PR #4763)
 * Changes error to warning on Universe creation if guessing fails
   due to missing information (Issue #4750, PR #4754)
 * Adds guessed attributes documentation back to each parser page
   and updates overall guesser docs (Issue #4696)
 * Fix Bohrium (Bh) atomic mass in tables.py (PR #3753)
 * set `n_parts` to the total number of frames being analyzed if
   `n_parts` is bigger. (Issue #4685)
 * Catch higher dimensional indexing in GroupBase & ComponentBase (Issue #4647)
 * Do not raise an Error reading H5MD files with datasets like
   `observables/<particle>/<property>` (part of Issue #4598, PR #4615)
 * Fix failure in double-serialization of TextIOPicklable file reader.
   (Issue #3723, PR #3722)
 * Fix failure to preserve modification of coordinates after serialization,
   e.g. with transformations
   (Issue #4633, PR #3722)
 * Fix PSFParser error when encoutering string-like resids
 * (Issue #2053, Issue #4189 PR #4582)
 * Fix `MDAnalysis.analysis.align.AlignTraj` not accepting writer kwargs
   (Issue #4564, PR #4565)
 * Fix #4259 via removing argument `parallelizable` of `NoJump` transformation.
 * Fix doctest errors of analysis/pca.py related to rounding issues
   (Issue #3925, PR #4377)
 * Convert openmm Quantity to raw value for KE and PE in OpenMMSimulationReader.
 * Atomname methods can handle empty groups (Issue #2879, PR #4529)
 * Add support for TPR files produced by Gromacs 2024.1 (PR #4523)