@@ -244,6 +244,7 @@ Chronological list of authors
   - Fabian Zills
   - Laksh Krishna Sharma
   - Matthew Davies
+  - Jia-Xin Zhu
 
 
 External code
